db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Go\bin\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Go\bin\kompose.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/quotenet: "true"
        io.kompose.service: db
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: dev
        - name: POSTGRES_PASSWORD
          value: mysecretpassword
        - name: POSTGRES_USER
          value: postgres-dev
        image: postgres
        imagePullPolicy: ""
        name: quotedb
        ports:
        - containerPort: 5432
        resources: {}
      hostname: db
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
