quoteapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Go\bin\kompose.exe convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: quoteapi
  name: quoteapi
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: quoteapi
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Go\bin\kompose.exe convert
        kompose.service.type: LoadBalancer
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/quotenet: "true"
        io.kompose.service: quoteapi
    spec:
      containers:
      - env:
        - name: DB_HOST
          value: db
        - name: DB_NAME
          value: dev
        - name: DB_PASSWORD
          value: mysecretpassword
        - name: DB_USER
          value: postgres-dev
        image: rahmancam/quoteapi:v1
        imagePullPolicy: ""
        name: quoteapi
        ports:
        - containerPort: 8080
        resources: {}
      hostname: quoteapi
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
